Alignment fixes for text overlay

--- a/css/group.css
+++ b/css/group.css
@@ -51,7 +51,7 @@ li:hover .textoverlay {
 
 p.names {
     position: absolute;
-    bottom: 50%;
-    right: 50%;
+    padding-top: 50px;
+    padding-left: 25px;
     color: #C6E1F7;
 }
